--- a/Nos produits et services/Gemmes/index_gemmes.html
+++ b/Nos produits et services/Gemmes/index_gemmes.html
@@ -30,9 +30,9 @@
 </ul>
 </li>
 
-<li><a href="../Actualités/index_actu.html"> Actualités</a></li>
-<li><a href="../Avis clients/index_avisclients.html"> Avis clients</a></li>
-<li><a href="../Nous contacter/index_contact.html"> Nous contacter</a></li>
+<li><a href="../../Actualités/index_actu.html"> Actualités</a></li>
+<li><a href="../../Avis clients/index_avisclients.html"> Avis clients</a></li>
+<li><a href="../../Nous contacter/index_contact.html"> Nous contacter</a></li>
 </div>
 
 </ul>
@@ -72,6 +72,16 @@
 <!-- fin code site sélection produit -->
 
 </body>
+
+<footer>
+
+<div class="pied_de_page">
+<h3>&copy; Copyright The French Cutter 2023</h3>
+</div>
+
+</footer>
+
+
 </html>
 
 <!-- site pour la sélection produit : https://codingartistweb.com/2021/11/product-filter-and-search-using-javascript/-->
