--- a/Nous contacter/index_contact.html
+++ b/Nous contacter/index_contact.html
@@ -38,7 +38,11 @@
 </ul>
 </nav>
 
-<form method="post" action="mail.php">
+<form method="post" action="mail.js">
+<script>
+<link rel="stylesheet" href="mail.js">
+</script>
+
 <h1>Nous contacter</h1>
 <div class="separation"></div>
 <div class="corps-formulaire">
