--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <title>WA-Gems website</title>
 <link rel="stylesheet" href="Feuille de style.css">
 <head>
+<div>
+<p class="scroller"></p>
+</div>
+
 <div class="en-tete">
 <!--<li><a href="index.html"><h1>WA-Gems</h1></a></li>-->
 <a href="index.html"><img src="Data/logo_TFC_3.png" alt="logo TFC"></a>
@@ -10,6 +14,7 @@
 </div>
 </head>
 <body>
+
 <nav>
 <ul>
 
@@ -81,5 +86,6 @@
 </div>
 
 </footer>
+
 
 </html>
