--- a/Nos produits et services/Gemmes/index_gemmes.html
+++ b/Nos produits et services/Gemmes/index_gemmes.html
@@ -4,6 +4,10 @@
 <link rel="stylesheet" href="feuille de style gemmes.css">
 <head>
 
+<div>
+<p class="scroller"></p>
+</div>
+
 <div class="en-tete">
 <a href="../../index.html"><img src="../../Data/logo_TFC_3.png" alt="logo TFC"></a>
 </div>
