--- a/Nous contacter/index_contact.html
+++ b/Nous contacter/index_contact.html
@@ -5,6 +5,10 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <head>
 
+<div>
+<p class="scroller"></p>
+</div>
+
 <div class="en-tete">
 <a href="../index.html"><img src="../Data/logo_TFC_3.png" alt="logo TFC"></a>
 </div>
